--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 @layer base {
   @font-face {
     font-family: "Satoshi-Regular";
